[package]
name = "zeon-binlog"
version = "0.0.1"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/Zeon"

[lib]
name = "zeon_binlog"
path = "lib.rs"

[features]
reader = []
default = ["reader"]

[dependencies]
futures-lite = "1"
macros = { git = "https://github.com/Berylsoft/rust-macros" }
zeon = { path = "../core" }
