[package]
name = "zeon"
version = "0.0.1"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/Zeon"

[lib]
name = "zeon"
path = "lib.rs"

[dependencies]
num_enum = "0.5"
foundations = { path = "../../foundations" }

[dev-dependencies]
hex = "*"
hex-literal = "*"
