[package]
name = "zeon"
version = "0.0.1"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/Zeon"

[lib]
name = "zeon"
path = "lib.rs"

[dependencies]
num_enum = "0.5"
foundations = { path = "../../foundations", default-features = false, features = [
    "now",
    "usize-casting",
    "byterepr",
    "bytes-read",
    "num-compress",
    "case-convert",
    "const-bytes-equal",
    "sha3",

    "concat-string",
    "error-enum",
    "byterepr-macros",
] }

[dev-dependencies]
hex = "*"
hex-literal = "*"
