[package]
name = "zeon-schema-derive"
version = "0.0.1"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/Zeon"

[[bin]]
name = "schema-derive"
path = "main.rs"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
prettyplease = "*"
hex = "*"
indexmap = "*"
macros = { git = "https://github.com/Berylsoft/rust-macros" }
zeon = { path = "../core" }
